Add year filter (2003+) to all commands; refresh test data

--- a/tests/test_cases/2024/commands/743.763.220E25|fc=1,f=2003-.yaml
+++ b/tests/test_cases/2024/commands/743.763.220E25|fc=1,f=2003-.yaml
@@ -1,4 +1,4 @@
-command_id: 743.763.220E25|fc=1
+command_id: 743.763.220E25|fc=1,f=2003-
 test_cases:
 - expected_values:
     PATROL_TP_FR: 198.22428
