--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -1,11 +1,11 @@
 model_year: 2024
 supported_commands_by_ecu:
   "743":
-  - 743.763.220E01|fc=1:PATROL_ODO
-  - 743.763.220E25|fc=1:PATROL_TP_FR
-  - 743.763.220E26|fc=1:PATROL_TP_FL
-  - 743.763.220E27|fc=1:PATROL_TP_RR
-  - 743.763.220E28|fc=1:PATROL_TP_RL
+  - 743.763.220E01|fc=1,f=2003-:PATROL_ODO
+  - 743.763.220E25|fc=1,f=2003-:PATROL_TP_FR
+  - 743.763.220E26|fc=1,f=2003-:PATROL_TP_FL
+  - 743.763.220E27|fc=1,f=2003-:PATROL_TP_RR
+  - 743.763.220E28|fc=1,f=2003-:PATROL_TP_RL
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
