--- a/.github/workflows/response_tests.yml
+++ b/.github/workflows/response_tests.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Comment test results on PR
         if: always() && github.event_name == 'pull_request'
+        continue-on-error: true
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: ${{ env.TEST_RESULTS }}
